--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,6 +31,31 @@
 
     <!-- Main Content -->
     <main class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
+        <!-- Upload Section -->
+        <div class="bg-white rounded-lg shadow p-6 mb-8">
+            <h2 class="text-xl font-semibold text-gray-900 mb-4">마크다운 파일 업로드</h2>
+            <div class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center hover:border-gray-400 transition-colors" id="upload-area">
+                <div class="space-y-4">
+                    <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48">
+                        <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    <div>
+                        <p class="text-lg text-gray-600">파일을 선택하거나 여기에 드래그하세요</p>
+                        <p class="text-sm text-gray-500 mt-1">마크다운 파일만 업로드 가능 (최대 10MB)</p>
+                    </div>
+                    <div>
+                        <input type="file" id="file-input" accept=".md,.markdown" class="hidden">
+                        <button id="upload-btn" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors">
+                            파일 선택
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div id="upload-status" class="mt-4 hidden">
+                <!-- Upload status will be shown here -->
+            </div>
+        </div>
+
         <!-- File List Section -->
         <div class="bg-white rounded-lg shadow p-6 mb-8">
             <h2 class="text-xl font-semibold text-gray-900 mb-4">마크다운 파일 목록</h2>
