Add file deletion functionality

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TripFlow - 마크다운 여행 계획 뷰어</title>
+    <title>TripFlow - 여행 계획 뷰어</title>
     <meta name="description" content="마크다운으로 작성한 여행 계획을 쉽게 읽어보세요">
     
     <!-- Tailwind CSS -->
@@ -24,7 +24,7 @@
                     </svg>
                     <h1 class="text-2xl font-bold text-gray-900">TripFlow</h1>
                 </div>
-                <p class="text-gray-600">마크다운 여행 계획 뷰어</p>
+                <p class="text-gray-600">여행 계획 뷰어</p>
             </div>
         </div>
     </header>
@@ -41,7 +41,7 @@
                     </svg>
                            <div>
                                <p class="text-lg text-gray-600">여행 계획을 작성하고 공유해보세요</p>
-                               <p class="text-sm text-gray-500 mt-1">마크다운 형식의 여행 계획서 (최대 10MB)</p>
+                               <p class="text-sm text-gray-500 mt-1">자유로운 형식의 여행 계획서 (최대 10MB)</p>
                            </div>
                     <div>
                         <input type="file" id="file-input" accept=".md,.markdown" class="hidden">
@@ -84,7 +84,7 @@
     <footer class="bg-white border-t mt-16">
         <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
             <div class="text-center text-sm text-gray-500">
-                <p>&copy; 2025 TripFlow. 마크다운 여행 계획 뷰어</p>
+                <p>&copy; 2025 TripFlow.</p>
             </div>
         </div>
     </footer>
