Add support for txt files

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,10 +41,10 @@
                     </svg>
                            <div>
                                <p class="text-lg text-gray-600">여행 계획을 작성하고 공유해보세요</p>
-                               <p class="text-sm text-gray-500 mt-1">자유로운 형식의 여행 계획서 (최대 10MB)</p>
+                               <p class="text-sm text-gray-500 mt-1">마크다운 또는 텍스트 형식의 여행 계획서 (최대 10MB)</p>
                            </div>
                     <div>
-                        <input type="file" id="file-input" accept=".md,.markdown" class="hidden">
+                        <input type="file" id="file-input" accept=".md,.markdown,.txt" class="hidden">
                                <button id="upload-btn" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors">
                                    여행 계획 업로드
                                </button>
