--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -68,14 +68,28 @@
         <div id="markdown-viewer" class="hidden bg-white rounded-lg shadow p-6">
             <div class="flex justify-between items-center mb-6">
                 <h2 id="file-title" class="text-2xl font-bold text-gray-900">파일 제목</h2>
-                <button id="close-viewer" class="text-gray-500 hover:text-gray-700">
-                    <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                    </svg>
-                </button>
+                <div class="flex items-center space-x-2">
+                    <button id="edit-btn" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition-colors">
+                        편집
+                    </button>
+                    <button id="save-btn" class="bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 transition-colors hidden">
+                        저장
+                    </button>
+                    <button id="cancel-btn" class="bg-gray-600 text-white px-4 py-2 rounded-md hover:bg-gray-700 transition-colors hidden">
+                        취소
+                    </button>
+                    <button id="close-viewer" class="text-gray-500 hover:text-gray-700">
+                        <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                        </svg>
+                    </button>
+                </div>
             </div>
             <div id="markdown-content" class="prose prose-lg max-w-none">
                 <!-- Markdown content will be rendered here -->
+            </div>
+            <div id="editor-container" class="hidden">
+                <textarea id="file-editor" class="w-full h-96 p-4 border border-gray-300 rounded-md font-mono text-sm resize-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"></textarea>
             </div>
         </div>
     </main>
