feat: Add file download functionality
- Add download parameter support to GET /api/files/:filename endpoint
- Set proper Content-Disposition headers for file downloads
- Add download buttons to file list and file viewer
- Implement client-side download functionality with temporary anchor elements
- Support both viewing and downloading files from the same endpoint

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -69,6 +69,9 @@
             <div class="flex justify-between items-center mb-6">
                 <h2 id="file-title" class="text-2xl font-bold text-gray-900">파일 제목</h2>
                 <div class="flex items-center space-x-2">
+                    <button id="download-btn" class="bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 transition-colors">
+                        다운로드
+                    </button>
                     <button id="edit-btn" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition-colors">
                         편집
                     </button>
